      is changed from the output file to the link command.
    * (This feature is not work well from now)Remove non-worked global_cc_each,
      global_ccflags_each, global_optimize_each from SPVM::Builder::CC.
    * Remove cc_each, ccflags_each, optimize_each.
    * Remove lib_type from SPVM::Builder::ObjectFileInfo.
  [Document]
    * Add the document of SPVM::Builder::LinkInfo to_string method.
    * Add the doucment of Error class.
    * Remove non-worked global_cc_each, global_ccflags_each, global_optimize_each doc.
0.9620 2022-07-09
  [New Featres]
    * Add Error class that class id is 1.
    * Add a constant value SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_CLASS in native API.
    * Add a constant value SPVM_NATIVE_C_CLASS_ID_ERROR in native API.
  [Changes]
    * Add [Changes] hedding to the Changes file that is generated by spvmdist.
    * Non-native method must have its block.
  [Imcompative Changes]
    * Rename the following constant values of native API.
      [Before]
      SPVM_NATIVE_C_BASIC_TYPE_ID_BYTE_OBJECT
      SPVM_NATIVE_C_BASIC_TYPE_ID_SHORT_OBJECT
      SPVM_NATIVE_C_BASIC_TYPE_ID_INT_OBJECT
      SPVM_NATIVE_C_BASIC_TYPE_ID_LONG_OBJECT
      SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT_OBJECT
      SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE_OBJECT
      SPVM_NATIVE_C_BASIC_TYPE_ID_BOOL_OBJECT
      [After]
      SPVM_NATIVE_C_BASIC_TYPE_ID_BYTE_CLASS
      SPVM_NATIVE_C_BASIC_TYPE_ID_SHORT_CLASS
      SPVM_NATIVE_C_BASIC_TYPE_ID_INT_CLASS
      SPVM_NATIVE_C_BASIC_TYPE_ID_LONG_CLASS
      SPVM_NATIVE_C_BASIC_TYPE_ID_FLOAT_CLASS
      SPVM_NATIVE_C_BASIC_TYPE_ID_DOUBLE_CLASS
      SPVM_NATIVE_C_BASIC_TYPE_ID_BOOL_CLASS
    * The numeric argument of the method call using exchange API must be a defined numeric or floating-point compatible value.
      Otherwise an exception is thrown.
  [Bug Fix]
    * Fix the bug that the linker output twice to stdout and stderr. Suppress stdout.
  [Incompatible Bug Fix]